<resources>
    <string name="app_name">mobile-application</string>
    <string name="taxi_name">Dusha Taxi</string>
    <string name="report">Report</string>
    <string name="stop">stop</string>
    <string name="panic">PANIC</string>
    <string name="go_inactive">go inactive</string>
    <string name="finish">finish</string>
    <string name="view">view</string>
    <string name="send">send</string>
    <string name="rate">rate</string>
    <string name="rating">rating</string>
    <string name="start">start</string>
    <string name="show">show</string>
    <string name="edit">edit profile</string>
    <string name="save">save</string>
    <string name="add">add</string>
    <string name="change_photo">Change photo</string>
    <string name="change_password">Change password</string>
    <string name="personal_info">Personal info</string>
    <string name="vehicle_info">Vehicle info</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">Ride History</string>
    <string name="favorites">Favorite Routes</string>
    <string name="reports">Reports</string>
    <string name="pricing">Pricing</string>
    <string name="notification">Notifications</string>
    <string name="drivers">Drivers</string>
    <string name="chat">Chat</string>
    <string name="ride_history">Ride History</string>
    <string name="logout">Logout</string>
    <string name="type">Type</string>
    <string name="support_chat">Support Chat</string>
    <string name="logo">Logo</string>
    <string name="chat_list">Chat List</string>
    <string name="user">User</string>
    <string name="last_message">last message</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="ride_details">Ride Details</string>
    <string name="passengers">Passengers:</string>
    <string name="irregularity_reports">Irregularity Reports:</string>
    <string name="role_passenger">PASSENGER</string>
    <string name="role_driver">DRIVER</string>
    <string name="role_admin">ADMIN</string>
    <string name="report_header">Report</string>
    <string name="comment">Comment:</string>
    <string name="comment_hint">Write your comment here...</string>
    <string name="cancel">Cancel</string>
    <string name="rate_ride">Rate Ride</string>
    <string name="confirm">Confirm</string>
    <string name="new_price_hint">Enter new price</string>
    <string name="message_hint">Type a message...</string>

    <!-- Schedule Ride -->
    <string name="schedule_a_ride">Schedule a ride</string>
    <string name="schedule_a_ride_header">schedule a ride</string>
    <string name="ride_preferences_header">ride preferences</string>
    <string name="starting_point">Starting Point</string>
    <string name="destination">Destination</string>
    <string name="add_stop">+ add stop</string>
    <string name="add_passenger">+ add passenger</string>
    <string name="additional_instructions_hint">Additional instructions...</string>
    <string name="must_allow_pets">must allow pets:</string>
    <string name="must_allow_babies">must allow babies:</string>
    <string name="estimated_price">Estimated Price:</string>
    <string name="calculating">Calculating...</string>
    <string name="book_ride">Book Ride</string>
    <string name="stop_address">stop address</string>
    <string name="passenger_email_hint">passenger email or name</string>

    <!-- Vehicle Types -->
    <string-array name="vehicle_types">
        <item>Standard</item>
        <item>Luxury</item>
        <item>Van</item>
    </string-array>

    <!-- Schedule Types -->
    <string-array name="schedule_types">
        <item>now</item>
        <item>schedule for later</item>
    </string-array>

    <!-- Block Users -->
    <string name="block_users">Block Users</string>
</resources>