<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:id="@+id/ride_history_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rideHistoryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_history"
            android:fontFamily="@font/nobile_bold"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/dateFilterContainer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/rideHistoryView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFromDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"
                    android:fontFamily="@font/nobile_regular"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/to"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etToDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"
                    android:fontFamily="@font/nobile_regular"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?attr/colorPrimary" />

        <include
            android:id="@+id/card1"
            layout="@layout/item_ride_history"/>
        <include
            layout="@layout/item_ride_history"/>
        <include
            layout="@layout/item_ride_history"/>
        <include
            layout="@layout/item_ride_history"/>
        <include
            layout="@layout/item_ride_history"/>

    </LinearLayout>
</ScrollView>
